--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,103 +1,104 @@
 {% extends "base.html" %}
 {% block content %}
-    {% if session.user %}
-    <h3 class="left-align section-hmargin">New Recipe Form</h3>
-
-    <div class="row card-panel">
-        <form class="" method="POST" action="{{ url_for('add_recipe')}}" enctype="multipart/form-data">
-            <div class="row m0">
-                <div class="input-field col s12">
-                    <i class="fas fa-book red-text prefix"></i>
-                    <select id="category_name" name="category_name" class="validate" required>
-                        <option value="" disabled selected>Choose recipe category</option>
-                        {% for category in categories %}
-                            <option value="{{category.category_name}}">{{category.category_name}}</option>
-                        {% endfor %}
-                    </select>
-                    <label for="category_name">Recipe category</label>
-                </div>
+<!--Page form to add recipe in recipes collection-->
+{% if session.user %}
+<h3 class="left-align section-hmargin">New Recipe Form</h3>
+<div class="row card-panel">
+    <form class="" method="POST" action="{{ url_for('add_recipe')}}" enctype="multipart/form-data">
+        <div class="row m0">
+            <div class="input-field col s12">
+                <i class="fas fa-book red-text prefix"></i>
+                <select id="category_name" name="category_name" class="validate" required>
+                    <option value="" disabled selected>Choose recipe category</option>
+                    {% for category in categories %}
+                    <option value="{{category.category_name}}">{{category.category_name}}</option>
+                    {% endfor %}
+                </select>
+                <label for="category_name">Recipe category</label>
             </div>
-            <div class="row m0">
-                <div class="input-field col s12">
-                    <i class="fas fa-utensils red-text prefix"></i>
-                    <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
-                    <label for="recipe_name">Recipe Name</label>
-                </div>
+        </div>
+        <div class="row m0">
+            <div class="input-field col s12">
+                <i class="fas fa-utensils red-text prefix"></i>
+                <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
+                <label for="recipe_name">Recipe Name</label>
             </div>
-            <div class="row m0">
-                <div class="input-field col s12">
-                    <i class="fas fa-scroll red-text prefix"></i>
-                    <textarea id="recipe_description" name="recipe_description" class="materialize-textarea validate" minlength="150" maxlength="500" data-length="500" required></textarea>
-                    <label for="recipe_description">Description Of A Recipe / Minimum 150 </label>
-                </div>
+        </div>
+        <div class="row m0">
+            <div class="input-field col s12">
+                <i class="fas fa-scroll red-text prefix"></i>
+                <textarea id="recipe_description" name="recipe_description" class="materialize-textarea validate"
+                    minlength="150" maxlength="500" data-length="500" required></textarea>
+                <label for="recipe_description">Description Of A Recipe / Minimum 150 </label>
             </div>
-            <div class="row m0">
-                <h4>Ingredients</h4>
-                <div class="ingr_input_cont input-field col s12 l10">
-                    <i class="fas fa-list-alt red-text prefix"></i>
-                    <input id="ingredients_add" name="ingredients_add" type="text" class="validate">
-                    <label for="ingredients_add">Add ingredient</label>
-                </div>
-                <div class="input-field col s12 l2 right">
-                    <button class="btn add_list_item waves-effect waves-light btn-red red darken-1" type="button">
-                        Add Ingredient
-                    </button>
-                </div>
+        </div>
+        <div class="row m0">
+            <h4>Ingredients</h4>
+            <div class="ingr_input_cont input-field col s12 l10">
+                <i class="fas fa-list-alt red-text prefix"></i>
+                <input id="ingredients_add" name="ingredients_add" type="text" class="validate">
+                <label for="ingredients_add">Add ingredient</label>
             </div>
-            <div class="row m0">
-                <h4>Method</h4>
-                <div class="input-field col s12">
-                    <i class="fas fa-list-ol red-text prefix"></i>
-                    <textarea id="step_one" name="methods" class="materialize-textarea validate" required></textarea>
-                    <label for="step_one">Step One</label>
-                </div>
-                <div class="input-field col s12">
-                    <i class="prefix"></i>
-                    <textarea id="step_two" name="methods" class="materialize-textarea validate" required></textarea>
-                    <label for="step_two">Step Two</label>
-                </div>
-                <div class="input-field col s12">
-                    <i class="prefix"></i>
-                    <textarea id="step_three" name="methods" class="materialize-textarea validate"></textarea>
-                    <label for="step_three">Step Three</label>
-                </div>
+            <div class="input-field col s12 l2 right">
+                <button class="btn add_list_item waves-effect waves-light btn-red red darken-1" type="button">
+                    Add Ingredient
+                </button>
             </div>
-            <div class="row m0">
-                <div class="input-field col s12 l6">
-                    <i class="fas fa-clock red-text prefix"></i>
-                    <input id="prep_time" name="prep_time" type="number" min="1" max="600" class="validate" required>
-                    <label for="prep_time">Preparation Time / Minutes</label>
-                </div>
-                <div class="input-field col s12 l6">
-                    <i class="prefix"></i>
-                    <input id="cook_time" name="cook_time" type="number" min="0" max="600" class="validate" required>
-                    <label for="cook_time">Cook Time / Minutes</label>
-                </div>
+        </div>
+        <div class="row m0">
+            <h4>Method</h4>
+            <div class="input-field col s12">
+                <i class="fas fa-list-ol red-text prefix"></i>
+                <textarea id="step_one" name="methods" class="materialize-textarea validate" required></textarea>
+                <label for="step_one">Step One</label>
             </div>
-            <div class="row m0">
-                <div class="input-field col s12">
-                    <i class="fas fa-image red-text prefix"></i>
-                    <input id="recipe_image" name="recipe_image" type="text" class="validate" required>
-                    <label for="recipe_image">Recipe Image URL</label>
-                </div>
+            <div class="input-field col s12">
+                <i class="prefix"></i>
+                <textarea id="step_two" name="methods" class="materialize-textarea validate" required></textarea>
+                <label for="step_two">Step Two</label>
             </div>
-            <div class="row m0">
-                <div class="col s12 center-align">
-                    <a onclick="history.back();" href="#!" class="btn waves-effect waves-light btn-red red darken-1">
-                        Cancel <i class="fas fa-times-circle right"></i>
-                    </a>
-                    <button class="btn waves-effect waves-light red darken-1 btn-red" type="submit">
-                        Add Recipe <i class="fas fa-file right"></i>
-                    </button>
-                </div>
+            <div class="input-field col s12">
+                <i class="prefix"></i>
+                <textarea id="step_three" name="methods" class="materialize-textarea validate"></textarea>
+                <label for="step_three">Step Three</label>
             </div>
-        </form>
-    </div>
-    {% else %}
-    <div class="center-align valign-wrapper">
-        <h4 class="red-text">You Have To Be Logged-In To Perform This Task</h4>
-    </div>
-    {% endif %}
+        </div>
+        <div class="row m0">
+            <div class="input-field col s12 l6">
+                <i class="fas fa-clock red-text prefix"></i>
+                <input id="prep_time" name="prep_time" type="number" min="1" max="600" class="validate" required>
+                <label for="prep_time">Preparation Time / Minutes</label>
+            </div>
+            <div class="input-field col s12 l6">
+                <i class="prefix"></i>
+                <input id="cook_time" name="cook_time" type="number" min="0" max="600" class="validate" required>
+                <label for="cook_time">Cook Time / Minutes</label>
+            </div>
+        </div>
+        <div class="row m0">
+            <div class="input-field col s12">
+                <i class="fas fa-image red-text prefix"></i>
+                <input id="recipe_image" name="recipe_image" type="text" class="validate" required>
+                <label for="recipe_image">Recipe Image URL</label>
+            </div>
+        </div>
+        <div class="row m0">
+            <div class="col s12 center-align">
+                <a onclick="history.back();" href="#!" class="btn waves-effect waves-light btn-red red darken-1">
+                    Cancel <i class="fas fa-times-circle right"></i>
+                </a>
+                <button class="btn waves-effect waves-light red darken-1 btn-red" type="submit">
+                    Add Recipe <i class="fas fa-file right"></i>
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
+{% else %}
+<div class="center-align valign-wrapper">
+    <h4 class="red-text">You Have To Be Logged-In To Perform This Task</h4>
+</div>
+{% endif %}
 
 
 
