--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -1,39 +1,45 @@
 {% extends "base.html" %}
 {% block content %}
+<!--------Page for each recipe in details from recipes collection list------>
 <div class="row">
     <div class="col s12">
         <h4>{{recipes.recipe_name}}</h4>
     </div>
 </div>
 <div class="divider"></div>
+<!--------------Section for BreadCrumbs---------------------->
 <div class="nav-wrapper bcrumbs">
     <div class="col s12">
-        <a href="{{ url_for('get_latest') }}" class="black-text">HOME</a>
+        <a href="{{ url_for('home') }}" class="black-text">HOME</a>
         <i class="fas fa-caret-right red-text"></i>
-        <a href="{{ url_for('get_recipe')}}"  class="black-text">RECIPE LIST</a>
+        <a href="{{ url_for('get_recipe')}}" class="black-text">RECIPE LIST</a>
         <i class="fas fa-caret-right red-text"></i>
         <span>{{recipes.recipe_name.upper()}}</span>
-        <a onclick="history.back();" href="#!" class="right black-text"> <i class="fas fa-caret-left red-text"></i> GO BACK</a>
+        <a onclick="history.back();" href="#!" class="right black-text"> <i class="fas fa-caret-left red-text"></i> GO
+            BACK</a>
     </div>
 </div>
 
 <div class="divider"></div>
+<!------------------------Recipe information container------------------------------------->
 <div class="row rm-bottom-gap">
     <div class="col s12 m4">
-        <img class="responsive-img recipe_details" src="{{ recipes.recipe_image }}"
-            alt="{{recipes.recipe_name}}"><br />
+        <img class="responsive-img recipe_details" src="{{ recipes.recipe_image }}" alt="{{recipes.recipe_name}}"><br />
     </div>
     <div class="col s12 m8">
         <div class="card-content">
+            <!----------------If user is admin allow delete/edit recipe------------------->
             {% if session.user and is_admin %}
-            <div class="center">
-                <a  href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="red waves-effect waves-light btn-red darken-1 btn-small">
+            <div class="right">
+                <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}"
+                    class="red waves-effect waves-light btn-red darken-1 btn-small">
                     <i class="fas fa-edit"></i> EDIT
-                </a>&emsp;&emsp;
+                </a>&emsp;
                 <a href="#modal1" class=" btn-small waves-effect waves-light btn-red red darken-1 modal-trigger ">
                     <i class="fas fa-times-circle"></i> DELETE
                 </a>
             </div>
+            <!--------------------Section for modal to be called when delete btn is clicked----------------------------------->
             <div id="modal1" class="modal">
                 <div class="modal-content">
                     <h5>Are you sure you want to delete "{{recipes.recipe_name}}"?</h5>
@@ -45,15 +51,18 @@
                     <a href="#!" class="modal-close waves-effect waves-light btn-red green darken-1 btn-small">No</a>
                 </div>
             </div>
+            <!------Allow to delete/edit recipe only by the current user if he is an author of recipe---------------------->
             {% elif session.user == recipes.recipe_by %}
-            <div class="center">
-                <a  href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="red waves-effect waves-light btn-red darken-1 btn-small">
+            <div class="right">
+                <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}"
+                    class="red waves-effect waves-light btn-red darken-1 btn-small">
                     <i class="fas fa-edit"></i> EDIT
-                </a>&emsp;&emsp;
+                </a>&emsp;
                 <a href="#modal1" class=" btn-small waves-effect waves-light btn-red red darken-1 modal-trigger ">
                     <i class="fas fa-times-circle"></i> DELETE
                 </a>
             </div>
+            <!--------------------Section for modal to be called when delete btn is clicked----------------------------------->
             <div id="modal1" class="modal">
                 <div class="modal-content">
                     <h5>Are you sure you want to delete "{{recipes.recipe_name}}"?</h5>
@@ -99,6 +108,7 @@
         </div>
     </div>
 </div>
+<!--------------Recipe ingrediant and method container---------------------->
 <div class="row">
     <div class="col s12 m4">
         <h5>Ingredients</h5>
@@ -114,12 +124,11 @@
         <div class="divider"></div>
         <ol>
             {% for method in recipes.methods %}
-                {% if method|length > 0 %}
-                <li class="method-list">{{method}}</li>
-                {% endif %}
+            {% if method|length > 0 %}
+            <li class="method-list">{{method}}</li>
+            {% endif %}
             {% endfor %}
         </ol>
-
     </div>
 </div>
 {% endblock %}
