--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<!----------------Page for search result from main_page.hmtl------------------------->
+<!------------------Search bar for large and up screens--------------------------->
 <div class="row hide-on-med-and-down mb0">
     <form action="{{ url_for('search')}}" method="post" class="col s12">
         <div class="row valign-wrapper center-align mb0">
@@ -16,6 +18,7 @@
         </div>
     </form>
 </div>
+<!------------------Search bar for small and medium screens--------------------------->
 <div class="row show-on-medium-and-down hide-on-med-and-up mb0">
     <form action="{{ url_for('search')}}" method="post" class="col s12">
         <div class="row valign-wrapper center-align mb0">
@@ -41,6 +44,7 @@
     </div>
 </div>
 <div class="divider"></div>
+<!----------------------Recipes search results if found-------------------------->
 <div class="row main-section-margins">
     {% for recipe in recipes %}
     <div class="col s12 m6 l4 xl3">
@@ -69,6 +73,7 @@
     {% endfor %}
 </div>
 {% else %}
+<!----------------------Recipes search results if not found-------------------------->
 <div class="row main-section-margins valign-wrapper">
     <div class="col s12">
         <h4 class="left-align section-hmargin">
@@ -89,6 +94,7 @@
     </div>
 </div>
 <div class="divider"></div>
+<!----------------------Kitchen tools search results if found-------------------------->
 <div class="row main-section-margins">
     {% for item in kitchen_tools %}
     <div class="col s12 m6 l4 xl3">
@@ -119,6 +125,7 @@
     {% endfor %}
 </div>
 {% else %}
+<!----------------------Kitchen tools search results if not found-------------------------->
 <div class="row main-section-margins valign-wrapper">
     <div class="col s12">
         <h4 class="left-align section-hmargin">
