--- a/templates/tools.html
+++ b/templates/tools.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title_img %}
+<!-----------------Kitchen tools page hero_img container--------------------->
 <div class="image-title-holder tools">
     <div class="row">
         <div class="col s5">
@@ -12,6 +13,7 @@
 </div>
 {% endblock %}
 {% block content %}
+<!------------------Search bar for large and up screens--------------------------->
 <div class="row hide-on-med-and-down mb0">
     <form action="{{ url_for('search_items')}}" method="post" class="col s12">
         <div class="row valign-wrapper center-align mb0">
@@ -29,6 +31,7 @@
         </div>
     </form>
 </div>
+<!------------------Search bar for small and medium screens--------------------------->
 <div class="row show-on-medium-and-down hide-on-med-and-up mb0">
     <form action="{{ url_for('search_items')}}" method="post" class="col s12">
         <div class="row valign-wrapper center-align mb0">
@@ -46,15 +49,18 @@
     </form>
 </div>
 <div class="divider"></div>
+<!--------------Section for BreadCrumbs---------------------->
 <div class="nav-wrapper bcrumbs">
     <div class="col s12">
-        <a href="{{ url_for('get_latest') }}" class="black-text">HOME <i class="fas fa-caret-right red-text"></i></a>
+        <a href="{{ url_for('home') }}" class="black-text">HOME <i class="fas fa-caret-right red-text"></i></a>
         <a href="{{ url_for('get_product_list')}}" class="black-text">KITCHEN TOOLS</a>
-        <a onclick="history.back();" href="#!" class=" waves-effect waves-light right black-text"> <i class="fas fa-caret-left red-text"></i> GO BACK</a>
+        <a onclick="history.back();" href="#!" class=" waves-effect waves-light right black-text"> <i
+                class="fas fa-caret-left red-text"></i> GO BACK</a>
     </div>
 </div>
 <div class="divider"></div>
 {% if kitchen_tools.count() > 0 %}
+<!--------------------------All Kitchen tool item cards section------------------------------------>
 <div class="row main-section-margins">
     {% for item in kitchen_tools %}
     <div class="col s12 m6 l4 xl3">
@@ -85,15 +91,15 @@
     {% endfor %}
 </div>
 {% else %}
-    <div class="row main-section-margins valign-wrapper">
-        <div class="col s12">
-            <h4 class="left-align section-hmargin">
-                <span class="bolder-text-part red-text text-darken-1">No Kitchen</span>
-                <span> tools found on "{{query}}"</span>
-            </h4>
-        </div>
+<!-------------------Search results if not found container----------------------->
+<div class="row main-section-margins valign-wrapper">
+    <div class="col s12">
+        <h4 class="left-align section-hmargin">
+            <span class="bolder-text-part red-text text-darken-1">No Kitchen</span>
+            <span> tools found on "{{query}}"</span>
+        </h4>
     </div>
-    <div class="divider"></div>
+</div>
+<div class="divider"></div>
 {% endif %}
-
 {% endblock %}
