--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Online recipe cooking book">
+    <meta name="author" content="Osvaldas Zadeikis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
@@ -125,7 +127,7 @@
                     <div class="divider"></div>
                     <p class="grey-text text-lighten-4">Contact Us via phone or email:</p>
                     <p><i class="fas fa-phone-alt prefix"></i> +555-555555555</p>
-                    <p class="email-link"><i class="fas fa-at prefix"></i><a href="mailto: info@cookbook.com"
+                    <p class="email-link"><i class="fas fa-at prefix"></i><a href="mailto:info@cookbook.com"
                             class="white-text">info@cookbook.com</a></p>
                 </div>
                 <!--Follow us section with social media links-->
