--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -58,7 +58,7 @@
         <div class="card small responsive-size hoverable">
             <div class="card-image">
                 <a href="{{ url_for('recipe_details', recipe_id=recipe._id)}}">
-                    <img class="responsive-img" src="{{recipe.recipe_image}}">
+                    <img class="responsive-img" src="{{recipe.recipe_image}}" alt="{{recipe.recipe_name}}">
                 </a>
             </div>
             <div class="card-content center-align">
